--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -1,12 +1,13 @@
 ---
 import CallToAction from './CallToAction.astro';
 import Icon from './Icon.astro';
+import { m } from "../paraglide/messages.js";
 ---
 
 <aside>
-	<h2>Interested in working together?</h2>
+	<h2>{m.contactTitle()}</h2>
 	<CallToAction href="mailto:leandromqrs@hotmail.com?subject=Let's catch up for a cool opportunity!">
-		Send Me a Message
+		{m.contactCTA()}
 		<Icon icon="paper-plane-tilt" size="1.2em" />
 	</CallToAction>
 </aside>
